refactor: 第一篇博文
first post describing why and how to blog.

--- a/src/about.html
+++ b/src/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
-header-img: public/assets/img/about-bg.jpg
+description: ""
+header-img: public/assets/img/cement.png
 multilingual: true
 ---
 
