--- a/src/archive.html
+++ b/src/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 description: keep hungry keep foolish
-header-img: public/assets/img/tag-bg.jpg
+header-img: public/assets/img/cement.png
 ---
 
 <!--
