--- a/src/archive.html
+++ b/src/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: keep hungry keep foolish
+description:
 header-img: public/assets/img/cement.png
 ---
 
