--- a/src/archive.html
+++ b/src/archive.html
@@ -69,7 +69,7 @@ header-img: public/assets/img/cement.png
 
             <li>
                 {{ post.date | date:"%Y/%m/%d：" }}
-                <a href="{{ post.url }}" target="_blank">{{ post.title }}</a>
+                <a href="{{ post.url }}">{{ post.title }}</a>
                 {% for tag in post.tags %}
                 <a href="{{ site.baseurl }}/tags.html?tags={{ tag }}" title="{{ tag }}"> <font color="#0085a1">#{{ tag }}</font></a>
                 {% endfor %}
@@ -79,6 +79,7 @@ header-img: public/assets/img/cement.png
             </li>
             {% endfor %}
         </ul>
+        <div id="app"></div>
         </section>
     </div>
 </div>
