--- a/src/archive.html
+++ b/src/archive.html
@@ -19,7 +19,7 @@ header-img: public/assets/img/cement.png
             {% assign rowCounter = 0 %}
             {% assign isNewRow = 0 %}
             {% for post in site.posts %}
-            {% assign isNewRow = rowCounter | modulo: 10 %}
+            {% assign isNewRow = rowCounter | modulo: 6 %}
             {% assign thisYearMonth = post.date | date: "%Y/%m" %}
             {% assign prevYearMonth = post.previous.date | date: "%Y/%m" %}
             {% assign counter = counter | plus: 1 %}
@@ -29,7 +29,7 @@ header-img: public/assets/img/cement.png
                 {% endif %}
                 <td>
                     <a href="#{{ post.date | date: '%Y年%m月' }}">
-                        <font color="brown">{{ thisYearMonth }} {{ counter }}篇</font>
+                        <font color="brown">{{ thisYearMonth }} ({{ counter }})</font>
                     </a>
                 </td>
                 {% if forloop.first and isNewRow == 0 %}
@@ -68,14 +68,15 @@ header-img: public/assets/img/cement.png
             {% endunless %}
 
             <li>
-                {{ post.date | date:"%Y/%m/%d：" }}
                 <a href="{{ post.url }}">{{ post.title }}</a>
-                {% for tag in post.tags %}
-                <a href="{{ site.baseurl }}/tags.html?tags={{ tag }}" title="{{ tag }}"> <font color="#0085a1">#{{ tag }}</font></a>
-                {% endfor %}
+                {{ post.date | date:"%Y/%m/%d：" }}
                 {% for category in post.categories %}
                 <a href="{{ site.baseurl }}/categories.html?categories={{ category }}" title="{{ category }}"><font color="#9acd32">☖{{ category }}</font></a>
                 {% endfor %}
+                {% for tag in post.tags %}
+                <a href="{{ site.baseurl }}/tags.html?tags={{ tag }}" title="{{ tag }}"> <font color="#0085a1">#{{ tag }}</font></a>
+                {% endfor %}
+
             </li>
             {% endfor %}
         </ul>
