--- a/src/archive.html
+++ b/src/archive.html
@@ -29,8 +29,9 @@ header-img: public/assets/img/cement.png
                 {% endif %}
                 <td>
                     <a href="#{{ post.date | date: '%Y年%m月' }}">
-                        <font color="brown">{{ thisYearMonth }} ({{ counter }})</font>
+                    {{ thisYearMonth }}
                     </a>
+                    ({{ counter }})
                 </td>
                 {% if forloop.first and isNewRow == 0 %}
                 </tr>
@@ -43,9 +44,8 @@ header-img: public/assets/img/cement.png
 
         <hr>
 
-        <ul>
-            {% for post in site.posts %}
-
+        <ul style="list-style: none;">
+          {% for post in site.posts %}
             {%- assign _tags = '' -%}
             {%- assign _tag_names = '' -%}
             {%- for _tag_entry in post.tags -%}
@@ -58,27 +58,26 @@ header-img: public/assets/img/cement.png
             {%- endfor -%}
 
             {% unless post.next %}
-            <h2 id="{{ post.date | date: '%Y年%m月'}}">{{ post.date | date: '%Y年%m月' }}</h2>
+            <h4 id="{{ post.date | date: '%Y年%m月'}}">{{ post.date | date: '%Y年%m月' }}</h4>
             {% else %}
             {% capture currdate %}{{ post.date | date: '%Y%m' }}{% endcapture %}
             {% capture nextDate %}{{ post.next.date | date: '%Y%m' }}{% endcapture %}
             {% if currdate != nextDate %}
-            <h2 id="{{ post.date | date: '%Y年%m月'}}">{{ post.date | date: '%Y年%m月' }}</h2>
+            <h4 id="{{ post.date | date: '%Y年%m月'}}">{{ post.date | date: '%Y年%m月' }}</h4>
             {% endif %}
             {% endunless %}
 
             <li>
-                {{ post.date | date:"%Y/%m/%d：" }}
+                &nbsp;&nbsp;{{ post.date | date:"%Y/%m/%d：" }}
                 <a href="{{ post.url }}">{{ post.title }}</a>
-                {% for category in post.categories %}
-                <a href="{{ site.baseurl }}/categories.html?categories={{ category }}" title="{{ category }}"><font color="#9acd32">☖{{ category }}</font></a>
-                {% endfor %}
-                {% for tag in post.tags %}
-                <a href="{{ site.baseurl }}/tags.html?tags={{ tag }}" title="{{ tag }}"> <font color="#0085a1">#{{ tag }}</font></a>
-                {% endfor %}
-
+                <!--  {% for category in post.categories %}-->
+                <!--  <a href="{{ site.baseurl }}/categories.html?categories={{ category }}" title="{{ category }}"><font color="#9acd32">☖{{ category }}</font></a>-->
+                <!--  {% endfor %}-->
+                <!--  {% for tag in post.tags %}-->
+                <!--  <a href="{{ site.baseurl }}/tags.html?tags={{ tag }}" title="{{ tag }}"> <font color="#0085a1">#{{ tag }}</font></a>-->
+                <!--  {% endfor %}-->
             </li>
-            {% endfor %}
+          {% endfor %}
         </ul>
         <div id="app"></div>
         </section>
