--- a/src/categories.html
+++ b/src/categories.html
@@ -64,18 +64,21 @@ header-img: public/assets/img/cement.png
                 {% assign _entry = entry | split: '-' %}
                 {% assign entry_first_category = _entry[0] %}
                 {% capture entry_first_category_html %}
-                    <a class="tag-button" style="cursor: pointer;" data-categories-encode="{{ entry_first_category | strip | url_encode }}"
-                        title="{{ entry_first_category }}">{{ entry_first_category }}</a>
+                    <a class="tag-button" style="background-color: lightgray;"
+                       data-categories-encode="{{ entry_first_category | strip | url_encode }}"
+                       title="{{ entry_first_category }}">{{ entry_first_category }}</a>
                 {% endcapture %}
                 {% assign entry_second_category = _entry[1] %}
                 {% capture entry_second_category_html %}
-                    <a class="tag-button" style="cursor: pointer;" data-categories-encode="{{ entry_second_category | strip | url_encode }}"
-                        title="{{ entry_second_category }}">{{ entry_second_category }}</a>
+                    <a class="tag-button" style="background-color: lightgray;"
+                       data-categories-encode="{{ entry_second_category | strip | url_encode }}"
+                       title="{{ entry_second_category }}">{{ entry_second_category }}</a>
                 {% endcapture %}
                 {% assign entry_third_category = _entry[2] %}
                 {% capture entry_third_category_html %}
-                    <a class="tag-button" style="cursor: pointer;" data-categories-encode="{{ entry_third_category | strip | url_encode }}"
-                        title="{{ entry_third_category }}">{{ entry_third_category }}</a>
+                    <a class="tag-button" style="background-color: lightgray;"
+                       data-categories-encode="{{ entry_third_category | strip | url_encode }}"
+                       title="{{ entry_third_category }}">{{ entry_third_category }}</a>
                 {% endcapture %}
 
                 {% comment %} 不同一级分类 {% endcomment %}
@@ -120,20 +123,23 @@ header-img: public/assets/img/cement.png
             {% assign tmp_categories = '' %}
             {% for _post in site.posts %}
             {% for _category in _post.categories %}
-            {% unless categoryHierarchies contains _category %}
-                {% unless tmp_categories contains _category %}
-                <a class="tag-button" style="cursor: pointer;" data-categories-encode="{{ _category | strip | url_encode }}"
-                   title="{{ _category }}">{{ _category }}</a>
+            <!--            {% unless categoryHierarchies contains _category %}-->
+            {% unless tmp_categories contains _category %}
+                <a class="tag-button" style="background-color: lightgray; cursor: pointer;"
+                   data-categories-encode="{{ _category | strip | url_encode }}"
+                   title="{{ _category }}">
+                    {{ _category }}
+                </a>
                 {% assign tmp_categories = tmp_categories | append: _category %}
-                {% endunless %}
             {% endunless %}
+            <!--            {% endunless %}-->
             {% endfor %}
             {% endfor %}
             {% endcapture %}
 
-            <div id="tag_cloud" class="js-categories">
+            <div id="tag_cloud" class="tags tags-sup js-categories" style="font-size: 10px">
                 {{ category_toc }}
-                <span style="font-size: 14px">Undefined: </span> {{ undefiedCategories }}
+                <span style="font-size: 10px">&nbsp; &nbsp; Undefined: </span> {{ undefiedCategories }}
                 <br/>
                 <a style="cursor: pointer;" class="tag-button--all" data-categories-encode="">
                     Show All
@@ -226,9 +232,9 @@ header-img: public/assets/img/cement.png
                         <!-- capture tags for every article -->
                         <div class="post-content-preview">
                             {% if post.lang == 'en' %}
-                                {{ _article.content | strip_html | truncate:500 }}
+                                {{ _article.content | strip_html | truncate:500 | markdownify}}
                             {% else %}
-                                {{ _article.content | strip_html | truncate:400 }}
+                                {{ _article.content | strip_html | truncate:400 | markdownify}}}
                             {% endif %}
                         </div>
                     </a>
@@ -237,19 +243,19 @@ header-img: public/assets/img/cement.png
                         {{ _article.date | date: "%B %-d, %Y" }} &nbsp;|&nbsp;
                         约{{ _article.content | strip_html | strip_newlines | remove: " " | size | divided_by: 350 | plus: 1 }}分钟读完
                         大约{{ _article.content | strip_html | strip_newlines | remove: " " | size }}个字
-                        {% if has_article_tags == false %}
-                        {% else %}
-                            &nbsp;|&nbsp;
-                            <span class="tags tags-sup js-tags">
-                                {{ article_tags }}
-                            </span>
-                        {% endif %}
-                        <span class="tags tags-sup js-categories">
+                        <!--  {% if has_article_tags == false %}-->
+                        <!--  {% else %}-->
+                        <!--      &nbsp;|&nbsp;-->
+                        <!--      <span class="tags tags-sup js-tags">-->
+                        <!--          {{ article_tags }}-->
+                        <!--      </span>-->
+                        <!--  {% endif %}-->
+<!--                        <span class="tags tags-sup js-categories">-->
                         {% for category in _article.categories %}
-                            {%- if forloop.first -%}&nbsp;|&nbsp;{%- endif -%}
-                            <a data-categories-encode="{{ category | strip | url_encode }}" title="{{ category }}"><font color="#9acd32">☖{{ category }}</font></a>
+                            {%- if forloop.first -%}&nbsp;|&nbsp;&nbsp; {%- endif -%} &nbsp;
+                            <a data-categories-encode="{{ category | strip | url_encode }}" title="{{ category }}">☖{{ category }} </a>
                         {% endfor %}
-                        </span>
+<!--                        </span>-->
                     </p>
                     <hr/>
                 </div>
