--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@ title: "HOME"
         {% endif %}
         <div class="post-content-preview">
             {% if post.lang == 'en' %}
-                {{ post.content | strip_html | truncate:1000 }}
+                {{ post.content | strip_html | truncate:1000 | markdownify}}
             {% else %}
-                {{ post.content | strip_html | truncate:800 }}
+                {{ post.content | strip_html | truncate:800 | markdownify}}
             {% endif %}
         </div>
     </a>
@@ -59,19 +59,19 @@ title: "HOME"
         {{ post.date | date: "%B %-d, %Y" }} &nbsp;|&nbsp;
         约{{ post.content | strip_html | strip_newlines | remove: " " | size | divided_by: 350 | plus: 1 }}分钟读完
         大约{{ post.content | strip_html | strip_newlines | remove: " " | size }}个字
-        <span>
+
         {% for category in post.categories %}
-        {%- if forloop.first -%}&nbsp;|&nbsp;{%- endif -%}
-        <a href="{{ site.baseurl }}/categories.html?categories={{ category }}" title="{{ category }}"><font color="#9acd32">☖{{ category }}&nbsp;</font></a>
+        {%- if forloop.first -%}&nbsp;|&nbsp;{%- endif -%} &nbsp;
+            <a href="{{ site.baseurl }}/categories.html?categories={{ category }}" title="{{ category }}">{{ category }}&nbsp;</a>
         {% endfor %}
-        </span>
-        {% if has_article_tags == false %}
-        {% else %}
-        &nbsp;|&nbsp;
-        <span id='tag_cloud' class="tags tags-sup">
-            {{ article_tags }}
-        </span>
-        {% endif %}
+
+        <!--        {% if has_article_tags == false %}-->
+        <!--        {% else %}-->
+        <!--            &nbsp;|&nbsp;-->
+        <!--            <span class="tags tags-sup">-->
+        <!--            {{ article_tags }}-->
+        <!--            </span>-->
+        <!--        {% endif %}-->
     </p>
     <hr/>
     <!--  Posted by {% if post.author %}{{ post.author }}{% else %}{{ site.title }}{% endif %}-->
