--- a/src/archive.html
+++ b/src/archive.html
@@ -15,34 +15,44 @@ header-img: public/assets/img/cement.png
     <div class="row">
         <section class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <table>
+            {% assign mod = 6 %}
             {% assign counter = 0 %}
             {% assign rowCounter = 0 %}
             {% assign isNewRow = 0 %}
             {% for post in site.posts %}
-            {% assign isNewRow = rowCounter | modulo: 6 %}
-            {% assign thisYearMonth = post.date | date: "%Y/%m" %}
-            {% assign prevYearMonth = post.previous.date | date: "%Y/%m" %}
-            {% assign counter = counter | plus: 1 %}
-            {% if thisYearMonth != prevYearMonth %}
-                {% if isNewRow == 0 %}
-                <tr>
+                {% assign isNewRow = rowCounter | modulo: mod %}
+                {% assign thisYearMonth = post.date | date: "%Y/%m" %}
+                {% assign prevYearMonth = post.previous.date | date: "%Y/%m" %}
+                {% assign counter = counter | plus: 1 %}
+                {% if thisYearMonth != prevYearMonth %}
+                    {% if forloop.first or isNewRow == 0 %}<tr>{% endif %}
+                    <td>
+                        <a href="#{{ post.date | date: '%Y年%m月' }}">
+                        {{ thisYearMonth }}
+                        </a>
+                        ({{ counter }})
+                    </td>
+                    {% assign rowCounter = rowCounter | plus: 1 %}
+                    {% assign counter = 0 %}
+                    {% if rowCounter == mod and isNewRow == 0 %}</tr>{% endif %}
                 {% endif %}
-                <td>
-                    <a href="#{{ post.date | date: '%Y年%m月' }}">
-                    {{ thisYearMonth }}
-                    </a>
-                    ({{ counter }})
-                </td>
-                {% if forloop.first and isNewRow == 0 %}
-                </tr>
-                {% endif %}
-                {% assign rowCounter = rowCounter | plus: 1 %}
-                {% assign counter = 0 %}
-            {% endif %}
             {% endfor %}
             </table>
 
-        <hr>
+        <hr/>
+
+        {% for post in site.posts %}
+        {% if post.istodo %}
+            <ul style="list-style: none;">
+            <li>
+                &nbsp;&nbsp;{{ post.date | date: '%Y/%m/%d' }}&nbsp;&nbsp;
+                <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+            </ul>
+        {% endif %}
+        {% endfor %}
+
+        <hr/>
 
         <ul style="list-style: none;">
           {% for post in site.posts %}
@@ -68,18 +78,14 @@ header-img: public/assets/img/cement.png
             {% endunless %}
 
             <li>
-                &nbsp;&nbsp;{{ post.date | date:"%Y/%m/%d：" }}
+                &nbsp;&nbsp;{{ post.date | date: '%Y/%m/%d' }}&nbsp;&nbsp;
                 <a href="{{ post.url }}">{{ post.title }}</a>
-                <!--  {% for category in post.categories %}-->
-                <!--  <a href="{{ site.baseurl }}/categories.html?categories={{ category }}" title="{{ category }}"><font color="#9acd32">☖{{ category }}</font></a>-->
-                <!--  {% endfor %}-->
-                <!--  {% for tag in post.tags %}-->
-                <!--  <a href="{{ site.baseurl }}/tags.html?tags={{ tag }}" title="{{ tag }}"> <font color="#0085a1">#{{ tag }}</font></a>-->
-                <!--  {% endfor %}-->
             </li>
           {% endfor %}
         </ul>
-        <div id="app"></div>
+        <div id="app">
+
+        </div>
         </section>
     </div>
 </div>
