--- a/src/archive.html
+++ b/src/archive.html
@@ -78,7 +78,7 @@ header-img: public/assets/img/cement.png
             {% endunless %}
 
             <li>
-                &nbsp;&nbsp;{{ post.date | date: '%Y/%m/%d' }}&nbsp;&nbsp;
+                &nbsp;&nbsp;{{ post.date | date: '%Y/%m/%d' }}&nbsp;&nbsp
                 <a href="{{ post.url }}">{{ post.title }}</a>
             </li>
           {% endfor %}
