--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-description: "世界上有很多的东西"
+title: HOME
+description: 世界上有很多的东西
 hide-in-nav: true
-title: "HOME"
 ---
 
 {% include getTagLevelAmounts.html %}
