[Update] Change filename ArchivePagination.vue to Pagination.vue

--- a/src/categories.html
+++ b/src/categories.html
@@ -265,9 +265,9 @@ description: "并非是忘本，而是有一种满足、豪情、难以割舍和
 
             <div class="mini-post-list js-result">
                 <div id="app">
-                    <archive-pagination item-type="category">
+                    <pagination item-type="category">
                         <div id="htmlToVue">{{ html4ArticleTitles }}</div>
-                    </archive-pagination>
+                    </pagination>
                 </div>
             </div>
         </section>
