--- a/src/tags.html
+++ b/src/tags.html
@@ -142,9 +142,9 @@ https://github.com/kitian616/jekyll-TeXt-theme
 			{% endcapture %}
 			<div class="mini-post-list js-result">
 				<div id="app">
-					<archive-pagination item-type="tag">
+					<pagination item-type="tag">
 						<div id="htmlToVue">{{ html4ArticleTitles }}</div>
-					</archive-pagination>
+					</pagination>
 				</div>
 			</div>
 		</section>
